Change logo and fixing align

--- a/assets/css/pages-style.css
+++ b/assets/css/pages-style.css
@@ -114,12 +114,21 @@
 
 	#logo {
 		max-width: 100%;
+		white-space: nowrap;
+	    text-align: center;
 	}
 	
 	#logo a {
 		display: inline-block;
 		max-width: 100%;
 		text-align: center;
+		vertical-align: middle;
+	}
+	
+	.helper {
+		display: inline-block;
+	    height: 100%;
+	    vertical-align: middle;
 	}
 	
 	@media (min-width: 1200px) {
@@ -132,6 +141,9 @@
 		#header-sticky:not(.header-sticky) #logo a {
 			display: table-cell;
   			vertical-align: middle;
+		}
+		#logo {
+			height: 125px;
 		}
 	}
 	
